[tool.poetry]
name = "clean-python-api"
version = "0.1.0"
description = ""
authors = ["Raphael Castro"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
commitizen = "^2.16.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
