[tool.poetry]
name = "clean-python-api"
version = "0.1.0"
description = ""
authors = ["Raphael Castro"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
commitizen = "^2.16.0"
pre-commit = "^2.11.1"
black = {extras = ["d"], version = "^20.8b1"}
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"

[tool.black]
target-version = ['py38']
exclude = '''
/(
  | migrations
  | coverage
  | .library
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
# addopts = '--cov=clean-code-api --cov-report term'
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
