[tool.poetry]
name = "clean-python-api"
version = "0.1.0"
description = ""
authors = ["Raphael Castro"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
commitizen = "^2.17.0"
pre-commit = "^2.11.1"
black = {extras = ["d"], version = "^20.8b1"}
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-pspec = "^0.0.4"
pytest-watch = "^4.2.0"
pytest-picked = "^0.4.6"
pytest-custom-exit-code = "^0.3.0"

[tool.black]
target-version = ["py38"]
#exclude = '''
#/(
#  | .vscode
#  | .pytest_cache
#  | htmlcov
#)/
#'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["app"]
addopts = '--pspec -rx --tb=short'
markers = ['integration', 'unit']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
